src/app/tool/side-panel/accordeons/accordeons.component.scss
@import "../../../../styles.scss";
.accordeons {
    position: relative;
    background-color: $color-gray-bg-light;
    width: 100%;
    height: 100%;
    max-height: 100%;
    overflow-y: scroll;
    .accordeon{
        .label {
            height: 48px;
            z-index: 3;
            padding-left: 20px;
            padding-right: 20px;
            background-color: #FFF;
            border-bottom: 1px solid #CCD0D9;
            display: grid;
            grid-template-columns: 1fr 18px;
            grid-template-rows: 1fr;
            align-items: center;
            grid-template-areas:
                "text image";
            &.open {
                border: none;
                box-shadow: 0 0 1px 0 rgba(36,41,51,0.1), 0 2px 2px 0 rgba(15,19,26,0.1), 0 2px 4px 0 rgba(15,19,26,0.1);
            }

            h2 {
                grid-area: text;
                width: 100%;
                color: $color-gray-font-acc;
                height: 18px;
                font-size: 18px;
                line-height: 18px;
            }

            img {
                grid-area: image;
                transform:rotate(90deg);
                width: 18px;

                &.open {
                    transform:rotate(270deg);
                }
            }
            .spinner {
                grid-area: image;
                width: 18px;
            }
        }

        .content {
            background-color: transparent;
            overflow: hidden;
            max-height: 0px;
            &.rendered.open {
                max-height: 10000px;
                transition: max-height 0.5s;
            }
        }
    }
}

